objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Hide_Emergency_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the map will be shown on the emergency wizard</description>
        <label>Hide Emergency Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
        <label>Number Of Services To Drip Feed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__O2_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if enhanced scheduling and optimization engine is used</description>
        <label>Use enhanced scheduling and optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
        <label>Service Cluster Min Size (Closed Pilot)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Proximity__c</fullName>
        <label>Service Cluster Proximity (Closed Pilot)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__System_Jobs__c</fullName>
        <label>System Jobs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BATCH_ServicesInJeopardy</fullName>
                </value>
                <value>
                    <fullName>BATCH_ServicesDispatched</fullName>
                </value>
                <value>
                    <fullName>ChatterNotification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TerritoryLevel__c</fullName>
        <label>Territory Level</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_with_WM_Scheduling_Enhancements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this Service Territory is live with the scheduling enhancements built out by West Monroe in 2022.</inlineHelpText>
        <label>Live with WM Scheduling Enhancements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restock_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The warehouse which gets restocked if a tech uses a part from their van for a job in this Service Territory.</inlineHelpText>
        <label>Restock Warehouse</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Warehouse record with a Type of &quot;Warehouse.&quot;</errorMessage>
            <filterItems>
                <field>Location.LocationType</field>
                <operation>equals</operation>
                <value>Warehouse</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Service Territories</relationshipLabel>
        <relationshipName>Service_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>OperatingHours</columns>
        <columns>ParentTerritory</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Restock_WH_if_Live_with_WM</fullName>
        <active>true</active>
        <description>This Validation Rule ensures that, if a Service Territory has the &quot;Live with WM Scheduling Enhancements&quot; checkbox checked, the &quot;Restock Warehouse&quot; field is populated.</description>
        <errorConditionFormula>AND(
Live_with_WM_Scheduling_Enhancements__c = TRUE,
ISBLANK(Restock_Warehouse__c))</errorConditionFormula>
        <errorMessage>Because this Service Territory has the &quot;Live with WM Scheduling Enhancements&quot; checkbox checked, you must populate the &quot;Restock Warehouse&quot; field.</errorMessage>
    </validationRules>
</CustomObject>